# recipe_staging

./: .custom_channels  README.md
actsvg/output/src_cache/v0_4_51_4057cc3f/: .gitignore  CMakeLists.txt  README.md
actsvg/output/src_cache/v0_4_51_4057cc3f/.github/: check_format.sh
actsvg/output/src_cache/v0_4_51_4057cc3f/.github/workflows/: build.yml  checks.yml
actsvg/output/src_cache/v0_4_51_4057cc3f/cmake/: actsvg-config.cmake.in  actsvg-functions.cmake  actsvg-packaging.cmake
actsvg/output/src_cache/v0_4_51_4057cc3f/core/: CMakeLists.txt
actsvg/output/src_cache/v0_4_51_4057cc3f/data/: CMakeLists.txt
actsvg/output/src_cache/v0_4_51_4057cc3f/meta/: CMakeLists.txt
actsvg/output/src_cache/v0_4_51_4057cc3f/python/: CMakeLists.txt  setup.sh.in
actsvg/output/src_cache/v0_4_51_4057cc3f/python/examples/: polygons_from_obj.py  surface_material_from_json.py
actsvg/output/src_cache/v0_4_51_4057cc3f/python/notebooks/: barrel.ipynb  endcap.ipynb  primitives.ipynb
actsvg/output/src_cache/v0_4_51_4057cc3f/python/src/: core.cpp  display.cpp  examples.cpp  io.cpp  modules.cpp  proto.cpp  style.cpp  utilities.hpp
actsvg/output/src_cache/v0_4_51_4057cc3f/tests/: CMakeLists.txt
actsvg/output/src_cache/v0_4_51_4057cc3f/tests/common/: detector.hpp  helix.hpp  playground.hpp
actsvg/output/src_cache/v0_4_51_4057cc3f/tests/core/: CMakeLists.txt  arc.cpp  arrows.cpp  barrel.cpp  bezier.cpp  circle.cpp  copy.cpp  endcap.cpp  gradient.cpp  grids.cpp  infobox.cpp  label.cpp  line.cpp  markers.cpp  measures.cpp  polygon.cpp  polyline.cpp  rectangle.cpp  style.cpp  svg.cpp  text.cpp  views.cpp
actsvg/output/src_cache/v0_4_51_4057cc3f/tests/meta/: CMakeLists.txt  barrel_sheet.cpp  clusters.cpp  detector.cpp  endcap_sheet.cpp  eta_lines.cpp  grid.cpp  portal.cpp  seeds.cpp  surface_materials.cpp  surface_sheet.cpp  surfaces.cpp  trajectories.cpp  volume.cpp  wire_chamber.cpp
actsvg/output/src_cache/v0_4_51_4057cc3f/tests/web/: CMakeLists.txt  web_builder.cpp
actsvg/output/src_cache/v0_4_51_4057cc3f/web/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/: CMakeLists.txt  CODING  INSTALL  configure  configure.bak
bcl2fastq2/bcl2fastq/src/cmake/: bcl2fastq_redist_macros.cmake  boost.cmake  cppunit.cmake  cxxConfigure.cmake  cxxExecutable.cmake  cxxLibrary.cmake  globals.cmake  macros.cmake  zlib-ng.cmake
bcl2fastq2/bcl2fastq/src/cmake/bootstrap/: common.sh  installBoost.sh  installCmake.sh
bcl2fastq2/bcl2fastq/src/cmake/modules/: FindMarkdown.cmake  UseMarkdown.cmake
bcl2fastq2/bcl2fastq/src/cmake/postInstall/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/cmake/preInstall/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/cmake/preInstall/checkTargetPathsWritable/: CMakeLists.txt  checkTargetPathWritable.cmake
bcl2fastq2/bcl2fastq/src/cmake/preInstall/copyrightAndChanges/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/css/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/cxx/: CMakeLists.txt  CODING  Doxyfile.in  bcl2fastq.sln  bcl2fastq.vcxproj  bcl2fastq.vcxproj.filters
bcl2fastq2/bcl2fastq/src/cxx/include/common/: CsvGrammar.hh  CsvGrammar.hpp  Debug.hh  DirectoryValidator.hh  Endianness.hh  Exceptions.hh  FastIo.hh  FastIo.hpp  FileSystem.hh  InstallationPath.hh  Logger.hh  Options.hh  Program.hh  Program.hpp  ProgramInfo.hh  SampleMetadata.hh  StaticMemPool.hh  StaticMemPool.hpp  SystemCompatibility.hh  SystemCompatibility.hpp  Threads.hh  Threads.hpp  Timer.hh  Types.hh
bcl2fastq2/bcl2fastq/src/cxx/include/config/: Bcl2FastqOptions.hh  SampleSheetCsv.hh
bcl2fastq2/bcl2fastq/src/cxx/include/conversion/: AdapterLocator.hh  AdapterLocator.hpp  BclBaseConversion.hh  BclLoader.hh  BclReader.hh  Converter.hh  Demultiplexer.hh  Demultiplexer.hpp  FastqBuffer.hh  FastqCreator.hh  FastqCreator.hpp  FastqIterator.hh  FastqIterator.hpp  FastqWriter.hh  SampleIndex.hh  Stage.hh  Task.hh  TaskQueue.hh  TaskQueue.hpp  ThreadPool.hh  ThreadSafeQueue.hh  ThreadSafeQueue.hpp
bcl2fastq2/bcl2fastq/src/cxx/include/data/: AggregatedBclFileReader.hh  BclBuffer.hh  BclFile.hh  BclFileReader.hh  CbclFile.hh  ControlFile.hh  CycleBCIFile.hh  FastqFile.hh  FileReader.hh  FileReader.hpp  FilterFile.hh  Instrument.hh  InteropFile.hh  PositionsFile.hh  RawBclBuffer.hh  TileBclFileReader.hh
bcl2fastq2/bcl2fastq/src/cxx/include/io/: FileBufWithReopen.hh  FileBufWithReopen.hpp  GzipCompressor.hh  GzipDecompressor.hh  GzipDecompressor.hpp  SyncFile.hh  Utility.hh  Xml.hh  Xml.hpp
bcl2fastq2/bcl2fastq/src/cxx/include/layout/: BCIndex.hh  Barcode.hh  Barcode.hpp  BarcodeCollisionDetector.hh  BarcodeTranslationTable.hh  ConfigXml.hh  CycleInfo.hh  FileExistenceVerifier.hh  FlowcellInfo.hh  LaneInfo.hh  Layout.hh  ReadInfo.hh  ReadMetadata.hh  RunInfoXml.hh  SampleInfo.hh  TileInfo.hh  UseBasesMask.hh
bcl2fastq2/bcl2fastq/src/cxx/include/stats/: BarcodeHits.hh  BarcodeStats.hh  ConversionStatsXml.hh  DemultiplexingStatsXml.hh  DemuxReportGenerator.hh  Json.hh  TileStats.hpp
bcl2fastq2/bcl2fastq/src/cxx/lib/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/cxx/lib/common/: CMakeLists.txt  CsvGrammar.cpp  DirectoryValidator.cpp  Exceptions.cpp  FileSystem.cpp  InstallationPath.cpp  Logger.cpp  Options.cpp  ProgramInfo.cpp  SystemCompatibility.cpp  config.h.in
bcl2fastq2/bcl2fastq/src/cxx/libexec/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/cxx/unittest/: CMakeLists.txt  RegistryName.cpp  RegistryName.hh  check-source.sh  cppunitTest.cpp
bcl2fastq2/bcl2fastq/src/test/: CMakeLists.txt  bgzfData.hh
bcl2fastq2/bcl2fastq/src/test/config/: testBcl2FastqOptions.cpp  testSampleSheet.cpp
bcl2fastq2/bcl2fastq/src/test/conversion/: testAdapterLocator.cpp
bcl2fastq2/bcl2fastq/src/test/data/: testBgzfFile.cpp  testCbclFile.cpp  testCycleBCIFile.cpp  testInteropFile.cpp  testLaneBciFile.cpp  testPositionsFile.cpp  testRawBclBuffer.cpp
bcl2fastq2/bcl2fastq/src/test/helper/: Bcl2FastqTestHelper.hh
bcl2fastq2/bcl2fastq/src/test/layout/: testLaneInfo.cpp  testLayout.cpp  testReadInfo.cpp
bcl2fastq2/bcl2fastq/src/xsl/: CMakeLists.txt
bcl2fastq2/bcl2fastq/src/xsl/demux/: FlowcellSummaryPage.xsl  GenerateReport.xsl
(+6010 files in other folders)
