################################################################################
##
## BCL to FASTQ file converter
## Copyright (c) 2007-2015 Illumina, Inc.
##
## This software is covered by the accompanying EULA
## and certain third party copyright/licenses, and any user of this
## source file is bound by the terms therein.
##
################################################################################
##
## file CMakeLists.txt
##
## Configuration file for the preInstall subdirectory.
##
## author Roman Petrovski
##
################################################################################

add_subdirectory (checkTargetPathsWritable)
add_subdirectory (copyrightAndChanges)


